// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> create dropdown component 1`] = `
<div
  className="fd-dropdown"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          className="fd-button fd-dropdown__control"
          onClick={[Function]}
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 2`] = `
<div
  className="fd-dropdown blue"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          className="fd-button fd-dropdown__control fd-button--compact"
          onClick={[Function]}
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 3`] = `
<div
  className="fd-dropdown fd-dropdown--standard"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          className="fd-button fd-button--standard fd-dropdown__control"
          onClick={[Function]}
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 4`] = `
<div
  className="fd-dropdown"
>
  <div
    className="fd-popover"
    id="jhqD0557"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          className="fd-button fd-dropdown__control sap-icon--filter"
          onClick={[Function]}
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 5`] = `
<div
  className="fd-dropdown"
>
  <div
    className="fd-popover"
    id="jhqD0561"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <button
          className="fd-button fd-dropdown__control sap-icon--filter is-disabled"
          disabled={true}
          onClick={[Function]}
        >
          Select
        </button>
      </div>
    </div>
  </div>
</div>
`;
